--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>knifepunch records</title>
+  </head>
+  <body>
 
+<header>
+
+    <h1>knifepunch records</h1>
+    <p>a diy activist label</p>
+
+</header>
+
+    <article>
+      <h2>Store</h2>
+<div class="tooltip">
+      <a target="_blank" href="https://store.knifepunchrecords.com">
+
+      <div class="polaroid">
+
+      <img src="./images/aclc.png">
+      <div class="container">
+        <p>Alachua County Labor Coalition
+          <br>
+        Alachua County Florida</p>
+      </div>
+    </div>
+    </a>
+      <span class="tooltiptext">
+    music, shirts,and tapes!
+  </span>
+</div>
+    </article>
+
+    <article>
+      <h2>We are on the internet</h2>
+      <dl>
+      <dt><a href="#">@knifepunchrecs</a></dt>
+        <dd>twitter</dd>
+      <dt><a href="#">knifepunchrecords</a></dt>
+        <dd>instagram</dd>
+      <dt><a href="#">knifepunchrecords</a></dt>
+        <dd>facebook</dd>
+        <dt><a href="#">knifepunch</a></dt>
+        <dd>twitch</dd>
+        <dt><a href="#">knifepunchrecords</a></dt>
+        <dd>youtube</dd>
+    </dl>
+    </article>
+
+
+
+    <footer>
+      <p>send us demos if u want!
+      <br>
+      <a href="mailto:knifepunchrecords@gmail.com">knifepunchrecords@gmail.com</a>
+</p>
+    </footer>
+  </body>
+</html>
