--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
 
       <div class="polaroid">
 
-      <img src="./images/aclc.png">
+      <img src="./images/kpr.png">
       <div class="container">
-        <p>Alachua County Labor Coalition
-          <br>
-        Alachua County Florida</p>
+        <p>knifepunch records</p>
       </div>
     </div>
     </a>
