--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 </div>
     </article>
 
-    <article>
-      <h2>We are on the internet</h2>
+    <div id="ontheInternet"
+      <h2>we are on the internet</h2>
       <dl>
       <dt><a href="#">@knifepunchrecs</a></dt>
         <dd>twitter</dd>
@@ -47,15 +47,15 @@
         <dt><a href="#">knifepunchrecords</a></dt>
         <dd>youtube</dd>
     </dl>
-    </article>
+  </div>
 
-
+<div id="bottomPadding"></div>
 
     <footer>
-      <p>send us demos if u want!
-      <br>
-      <a href="mailto:knifepunchrecords@gmail.com">knifepunchrecords@gmail.com</a>
+       <div class="footer_contents">
+      <p>send us demos if u want! |   <a href="mailto:knifepunchrecords@gmail.com">knifepunchrecords@gmail.com</a> | &copy two-thousand whatever
 </p>
+</div>
     </footer>
   </body>
 </html>
