--- a/index.html
+++ b/index.html
@@ -36,16 +36,18 @@
     <div id="ontheInternet"
       <h2>we are on the internet</h2>
       <dl>
-      <dt><a href="#">@knifepunchrecs</a></dt>
+      <dt><a href="https://twitter.com/knifepunchrecs">@knifepunchrecs</a></dt>
         <dd>twitter</dd>
-      <dt><a href="#">knifepunchrecords</a></dt>
+      <dt><a href="https://www.instagram.com/knifepunchrecords/">knifepunchrecords</a></dt>
         <dd>instagram</dd>
-      <dt><a href="#">knifepunchrecords</a></dt>
+      <dt><a href="https://www.facebook.com/knifepunchrecords/">knifepunchrecords</a></dt>
         <dd>facebook</dd>
-        <dt><a href="#">knifepunch</a></dt>
+        <dt><a href="https://www.twitch.tv/knifepunch">KPTV</a></dt>
         <dd>twitch</dd>
-        <dt><a href="#">knifepunchrecords</a></dt>
+        <dt><a href="https://www.youtube.com/channel/UCATUANH-LLEY2G110LDv5UQ">knifepunchrecords</a></dt>
         <dd>youtube</dd>
+        <dt><a href="http://insolidarityfl.org/">In Solidarity</a></dt>
+        <dd>from our friends.</dd>
     </dl>
   </div>
 
