--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
       <dl>
       <dt><a href="https://twitter.com/knifepunchrecs">@knifepunchrecs</a></dt>
         <dd>twitter</dd>
+        <dt><a href="https://knifepunchrecords.bandcamp.com/releases">compilations</a></dt>
+          <dd>bandcamp</dd>
       <dt><a href="https://www.instagram.com/knifepunchrecords/">knifepunchrecords</a></dt>
         <dd>instagram</dd>
       <dt><a href="https://www.facebook.com/knifepunchrecords/">knifepunchrecords</a></dt>
