--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div>
     </article>
 
-    <div id="ontheInternet"
+    <div id="ontheInternet">
       <h2>we are on the internet</h2>
       <dl>
       <dt><a href="https://twitter.com/knifepunchrecs">@knifepunchrecs</a></dt>
