--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
       <dl>
       <dt><a href="https://twitter.com/knifepunchrecs">@knifepunchrecs</a></dt>
         <dd>twitter</dd>
+        <dt><a href="https://discord.gg/GVYVK7r">chat</a></dt>
+          <dd>dicord</dd>
         <dt><a href="https://knifepunchrecords.bandcamp.com/releases">compilations</a></dt>
           <dd>bandcamp</dd>
       <dt><a href="https://www.instagram.com/knifepunchrecords/">knifepunchrecords</a></dt>
