--- a/index.html
+++ b/index.html
@@ -1,66 +1,76 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>knifepunch records</title>
-  </head>
-  <body>
 
-<header>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>knifepunch records</title>
+</head>
 
+<body>
+
+
+
+  <header>
     <h1>knifepunch records</h1>
-    <p>very polite violence</p>
+    <p>no gods, no genres</p>
+  </header>
+  <h2>we are on the internet</h2>
 
-</header>
+  <div id="linkC">
 
-    <article>
-      <h2>Store</h2>
-<div class="tooltip">
-      <a target="_blank" href="https://store.knifepunchrecords.com">
+    <img src="./images/shop.png">
+    <dt><a href="http://knifepunchrecords.com">knifepunchrecords.com</a></dt>
+    <dd>store</dd>
 
-      <div class="polaroid">
-
-      <img src="./images/kpr.png">
-      <div class="container">
-        <p>knifepunch records</p>
-      </div>
-    </div>
-    </a>
-      <span class="tooltiptext">
-    music, shirts,and tapes!
-  </span>
-</div>
-    </article>
-
-
-      <h2>we are on the internet</h2>
-      <div id="ontheInternet">
-      <dl>
-      <dt><a href="https://twitter.com/knifepunchrecs">@knifepunchrecs</a></dt>
-        <dd>twitter</dd>
-        <dt><a href="https://discord.gg/GVYVK7r">chat</a></dt>
-          <dd>dicord</dd>
-        <dt><a href="https://knifepunchrecords.bandcamp.com/releases">compilations</a></dt>
-          <dd>bandcamp</dd>
-      <dt><a href="https://www.instagram.com/knifepunchrecords/">knifepunchrecords</a></dt>
-        <dd>instagram</dd>
-      <dt><a href="https://www.facebook.com/knifepunchrecords/">knifepunchrecords</a></dt>
-        <dd>facebook</dd>
-        <dt><a href="https://www.twitch.tv/knifepunch">KPTV</a></dt>
-        <dd>twitch</dd>
-        <dt><a href="https://www.youtube.com/channel/UCATUANH-LLEY2G110LDv5UQ">knifepunchrecords</a></dt>
-        <dd>youtube</dd>
-    </dl>
   </div>
 
-<div id="bottomPadding"></div>
+  <div id="linkC">
+    <img src="./images/discord.png">
+    <dt><a href="https://discord.gg/GVYVK7r">chat</a></dt>
+    <dd>dicord</dd>
+  </div>
 
-    <footer>
-       <div class="footer_contents">
-      <p>send us demos if u want! |   <a href="mailto:knifepunchrecords@gmail.com">knifepunchrecords@gmail.com</a> | &copy two-thousand whatever
-</p>
-</div>
-    </footer>
-  </body>
+  <div id="linkC">
+    <img src="./images/twitter.png">
+    <dt><a href="https://twitter.com/knifepunchrecs">@knifepunchrecs</a></dt>
+    <dd>twitter</dd>
+  </div>
+
+  <div id="linkC">
+    <img src="./images/insta.png">
+    <dt><a href="https://www.instagram.com/knifepunchrecords/">knifepunchrecords</a></dt>
+    <dd>instagram</dd>
+  </div>
+
+  <div id="linkC">
+    <img src="./images/facebook.png">
+    <dt><a href="https://www.facebook.com/knifepunchrecords/">knifepunchrecords</a></dt>
+    <dd>facebook</dd>
+  </div>
+
+  <div id="linkC">
+    <img src="./images/twitch.png">
+    <dt><a href="https://www.twitch.tv/knifepunch">KPTV</a></dt>
+    <dd>twitch</dd>
+  </div>
+
+  <div id="linkC">
+    <img src="./images/youtube.png">
+    <dt><a href="https://www.youtube.com/channel/UCATUANH-LLEY2G110LDv5UQ">knifepunchrecords</a></dt>
+    <dd>youtube</dd>
+  </div>
+
+
+  <div id="bottomPadding"></div>
+
+  <footer>
+    <div class="footer_contents">
+      <p>
+        knifepunch records loves you
+      </p>
+    </div>
+  </footer>
+</body>
+
 </html>
