--- a/index.html
+++ b/index.html
@@ -17,50 +17,49 @@
   </header>
   <h2>we are on the internet</h2>
 
-  <div id="linkC">
+  <a style="display:block" href="http://knifepunchrecords.com">
+    <div id="linkC">
 
-    <img src="./images/shop.png">
-    <dt><a href="http://knifepunchrecords.com">knifepunchrecords.com</a></dt>
-    <dd>store</dd>
+      <img src="./images/shop.png">
+      <p>store</p>
 
-  </div>
+    </div>
+  </a>
 
-  <div id="linkC">
-    <img src="./images/discord.png">
-    <dt><a href="https://discord.gg/GVYVK7r">chat</a></dt>
-    <dd>dicord</dd>
-  </div>
+  <a style="display:block" href="https://discord.gg/GVYVK7r">
+    <div id="linkC">
+      <img src="./images/discord.png">
+      <p>dicord</p>
+    </div>
+  </a>
 
-  <div id="linkC">
-    <img src="./images/twitter.png">
-    <dt><a href="https://twitter.com/knifepunchrecs">@knifepunchrecs</a></dt>
-    <dd>twitter</dd>
-  </div>
+  <a style="display:block" href="https://twitter.com/knifepunchrecs">
+    <div id="linkC">
+      <img src="./images/twitter.png">
+      <p>twitter</p>
+    </div>
+  </a>
 
-  <div id="linkC">
-    <img src="./images/insta.png">
-    <dt><a href="https://www.instagram.com/knifepunchrecords/">knifepunchrecords</a></dt>
-    <dd>instagram</dd>
-  </div>
+  <a style="display:block" href="https://www.instagram.com/knifepunchrecords/">
+    <div id="linkC">
+      <img src="./images/insta.png">
+      <p>instagram</p>
+    </div>
+  </a>
 
-  <div id="linkC">
-    <img src="./images/facebook.png">
-    <dt><a href="https://www.facebook.com/knifepunchrecords/">knifepunchrecords</a></dt>
-    <dd>facebook</dd>
-  </div>
+  <a style="display:block" href="https://www.twitch.tv/knifepunch">
+    <div id="linkC">
+      <img src="./images/twitch.png">
+      <p>twitch</p>
+    </div>
+  </a>
 
-  <div id="linkC">
-    <img src="./images/twitch.png">
-    <dt><a href="https://www.twitch.tv/knifepunch">KPTV</a></dt>
-    <dd>twitch</dd>
-  </div>
-
-  <div id="linkC">
-    <img src="./images/youtube.png">
-    <dt><a href="https://www.youtube.com/channel/UCATUANH-LLEY2G110LDv5UQ">knifepunchrecords</a></dt>
-    <dd>youtube</dd>
-  </div>
-
+  <a style="display:block" href="https://www.youtube.com/channel/UCATUANH-LLEY2G110LDv5UQ">
+    <div id="linkC">
+      <img src="./images/youtube.png">
+      <p>youtube</p>
+    </div>
+  </a>
 
   <div id="bottomPadding"></div>
 
