--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
 
 <body>
 
-
-
   <header>
     <h1>knifepunch records</h1>
     <p>no gods, no genres</p>
   </header>
-  <h2>we are on the internet</h2>
 
   <a style="display:block" href="http://knifepunchrecords.com">
-    <div id="linkC">
+    <div class="linkC">
 
       <img src="./images/shop.png">
       <p>store</p>
@@ -27,35 +24,35 @@
   </a>
 
   <a style="display:block" href="https://discord.gg/GVYVK7r">
-    <div id="linkC">
+    <div class="linkC">
       <img src="./images/discord.png">
       <p>dicord</p>
     </div>
   </a>
 
   <a style="display:block" href="https://twitter.com/knifepunchrecs">
-    <div id="linkC">
+    <div class="linkC">
       <img src="./images/twitter.png">
       <p>twitter</p>
     </div>
   </a>
 
   <a style="display:block" href="https://www.instagram.com/knifepunchrecords/">
-    <div id="linkC">
+    <div class="linkC">
       <img src="./images/insta.png">
       <p>instagram</p>
     </div>
   </a>
 
   <a style="display:block" href="https://www.twitch.tv/knifepunch">
-    <div id="linkC">
+    <div class="linkC">
       <img src="./images/twitch.png">
       <p>twitch</p>
     </div>
   </a>
 
   <a style="display:block" href="https://www.youtube.com/channel/UCATUANH-LLEY2G110LDv5UQ">
-    <div id="linkC">
+    <div class="linkC">
       <img src="./images/youtube.png">
       <p>youtube</p>
     </div>
