--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                          ██░░░░░░░███               
                                       ██░░░█▒░░░░░░░█                       since 2019.
                                   ███░█░░█░█░░░█░░░░░█               
-                                 ██░░░░██░█░██░░░░░░░█       a gay working class trans label.
+                                 ██░░░░██░█░██░░░░░░░█       a gay working class trans community.
                                  ██░░░░░░░█░███░░░░░░░█              
                                █░░░██░░░█░░█░██░░░░░░░█              do it together, forever.
                               █▒░░░░░▒██░░░███░░░░░░░░█              
