--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
   <div class="menu-bar">
     <div class="left">
       <img src="/images/knifepunchCLEAR.png" class="logo" alt="">
-      <span class="menus active">KNIFE International</span>
+      <span class="menus active">KNIFEPUN.CH</span>
       <span class="menus">File</span>
       <span class="menus">Edit</span>
       <span class="menus">View</span>
       <span class="menus">Go</span>
-      <span class="menus">Window</span>
       <span class="menus">Help</span>
     </div></div>
   
